crates/figue/tests/integration/snapshots/main__integration__help__help_with_subcommands.snap
---
source: crates/figue/tests/integration/help.rs
expression: "$crate :: common ::\nstrip_binary_paths(& $crate :: common :: strip_ansi(& help))"
---
git 2.40.0

Git-like CLI with subcommands

USAGE:
    git [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <SHELL>
            Generate shell completions for Bash, Fish, or Zsh.

COMMANDS:
    clone
            Clone a repository
    log
            Show commit history
    remote
            Manage remotes
