crates/figue/tests/integration/snapshots/main__integration__help__tuple_variant_main_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "$crate :: common ::\nstrip_binary_paths(& $crate :: common :: strip_ansi(& help))"
---
myapp

USAGE:
    myapp [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <SHELL>
            Generate shell completions for Bash, Fish, or Zsh.

COMMANDS:
    build
            Build the project
    test
            Run tests
